vb/amzi.bas

Attribute VB_Name = "AmziLogicServer"
' AMZI.BAS - Visual Basic DLL Logic Server API Definitions
' and VB Cover Functions
' Copyright (c)1994-2010 Amzi! inc. All Rights Reserved.

Option Explicit

' Last Error Message and Code
Global ErrorLS As String
Global ErrLS As Long

' The type of error handling to perform, 0=message boxes, 1=generate errors
' Must be type Variant--Do not change
Global ErrorMethod As Variant

' The current engine id
Dim EngineID As Long

' The maximum size of strings returned from Prolog
' Must be type Variant--Do not change
Dim MaxStrLen As Variant

' Prolog Types
Global Const pATOM = 0
Global Const pINT = 1
Global Const pSTR = 2
Global Const pFLOAT = 3
Global Const pSTRUCT = 4
Global Const pLIST = 5
Global Const pTERM = 6
Global Const pADDR = 7
Global Const pVAR = 8
Global Const pWSTR = 9
Global Const pWATOM = 10
Global Const pREAL = 11

' Basic Types
Global Const bATOM = 0
Global Const bSTR = 1
Global Const bINT = 4
Global Const bLONG = 3
Global Const bSHORT = 4
Global Const bFLOAT = 5
Global Const bDOUBLE = 6
Global Const bADDR = 7
Global Const bTERM = 8
Global Const bWSTR = 9
Global Const bWATOM = 10
Global Const bMOD = 11
Global Const bGOAL = 12

' Function Definitions

#If unicode Then

Declare Function lsInit Lib "amzi.dll" Alias "lsInitW" (ENGidPtr As Long, ByVal INIFile As String) As Long
Declare Function lsInit2 Lib "amzi.dll" Alias "lsInit2W" (ENGidPtr As Long, ByVal INIParams As String) As Long
Declare Function lsInitLSX Lib "amzi.dll" (ByVal EngID As Long, Ptr As Any) As Long
Declare Function lsAddLSX Lib "amzi.dll" Alias "lsAddLSXW" (ByVal EngID As Long, ByVal LSXFile As String, Ptr As Any) As Long
Declare Function lsAddPred Lib "amzi.dll" Alias "lsAddPredW" (ByVal EngID As Long, ByVal Predname As String, ByVal Arity As Integer, ByVal pfunc As Long, ByVal arg As Long) As Long
Declare Function lsLoad Lib "amzi.dll" Alias "lsLoadW" (ByVal EngID As Long, ByVal XPLFile As String) As Long
Declare Function lsLoadFromMemory Lib "amzi.dll" Alias "lsLoadFromMemoryW" (ByVal EngID As Long, ByVal Filename As String, ByVal Length As Long, ptr As Any) As Long
Declare Function lsMain Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsReset Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsClose Lib "amzi.dll" (ByVal EngID As Long) As Long

Declare Function lsCall Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long) As Long
Declare Function lsRedo Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsCallStr Lib "amzi.dll" Alias "lSCallStrW" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsExec Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long) As Long
Declare Function lsExecStr Lib "amzi.dll" Alias "lsExecStrW" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsExecStrTh Lib "amzi.dll" Alias "lsExecStrThW" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsPutAction Lib "amzi.dll" Alias "lsPutActionW" (ByVal EngID As Long, ByVal StrPtr As String) As Long
Declare Function lsGetActionState Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsClearCall Lib "amzi.dll" (ByVal EngID As Long) As Long

Declare Function lsAsserta Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsAssertz Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsRetract Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsAssertaStr Lib "amzi.dll" Alias "lsAssertaStrW" (ByVal EngID As Long, ByVal StrPtr As String) As Long
Declare Function lsAssertzStr Lib "amzi.dll" Alias "lsAssertzStrW" (ByVal EngID As Long, ByVal StrPtr As String) As Long
Declare Function lsRetractStr Lib "amzi.dll" Alias "lsRetractStrW" (ByVal EngID As Long, ByVal StrPtr As String) As Long

Declare Function lsTermToStr Lib "amzi.dll" Alias "lsTermToStrW" (ByVal EngID As Long, ByVal Term As Long, ByVal StrPtr As String, ByVal StrLen As Long) As Long
Declare Function lsTermToStrQ Lib "amzi.dll" Alias "lsTermToStrQW" (ByVal EngID As Long, ByVal Term As Long, ByVal StrPtr As String, ByVal StrLen As Long) As Long
Declare Function lsStrToTerm Lib "amzi.dll" Alias "lsStrToTermW" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsStrTermLen Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long

Declare Function lsMakeAtom Lib "amzi.dll" Alias "lsMakeAtomW" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsMakeStr Lib "amzi.dll" Alias "lsMakeStrW" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsMakeInt Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal num As Long) As Long
Declare Function lsMakeFloat Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal num As Double) As Long
Declare Function lsMakeAddr Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, Ptr As Any) As Long

Declare Function lsGetTermType Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsGetTerm Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal BType As Integer, Ptr As Any) As Long

Declare Function lsGetFA Lib "amzi.dll" Alias "lsGetFAW" (ByVal EngID As Long, ByVal Term As Long, ByVal Functor As String, Arity As Integer) As Long
Declare Function lsMakeFA Lib "amzi.dll" Alias "lsMakeFAW" (ByVal EngID As Long, TermPtr As Long, ByVal Functor As String, ByVal Arity As Integer) As Long
Declare Function lsGetArg Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal ArgNum As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetArgType Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal ArgNum As Long) As Integer
Declare Function lsStrArgLen Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal ArgNum As Long) As Long
Declare Function lsUnify Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal Term As Long) As Long
Declare Function lsUnifyArg Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal ArgNum As Long, ByVal BType As Integer, Ptr As Any) As Long

Declare Function lsMakeList Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long) As Long
Declare Function lsPushList Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal Term As Long) As Long
Declare Function lsPopList Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetHead Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetTail Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long

Declare Function lsGetVersion Lib "amzi.dll" Alias "lsGetVersionW" (ByVal EngID As Long, ByVal StrPtr As String) As Long

Declare Function lsGetParm Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetParmType Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long) As Long
Declare Function lsStrParmLen Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long) As Long
Declare Function lsUnifyParm Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long, ByVal BType As Integer, Ptr As Any) As Long

Declare Function lsSetStream Lib "amzi.dll" (ByVal EngID As Long, ByVal Stream As Integer, ByVal Handle As Long) As Long
Declare Function lsGetStream Lib "amzi.dll" (ByVal EngID As Long, ByVal Stream As Integer) As Long

Declare Sub lsGetExceptMsg Lib "amzi.dll" Alias "lsGetExceptMsgW" (ByVal EngID As Long, ByVal StrPtr As String, ByVal StrLen As Long)
Declare Function lsGetExceptRC Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Sub lsGetExceptReadBuffer Lib "amzi.dll" Alias "lsGetExceptReadBufferW" (ByVal EngID As Long, ByVal StrPtr As String, StrLen As Long)
Declare Function lsErrRaise Lib "amzi.dll" Alias "lsErrRaiseW" (ByVal EngID As Long, ByVal StrPtr As String) As Long

#Else

Declare Function lsInit Lib "amzi.dll" Alias "lsInitA" (ENGidPtr As Long, ByVal INIFile As String) As Long
Declare Function lsInit2 Lib "amzi.dll" Alias "lsInit2A" (ENGidPtr As Long, ByVal INIParams As String) As Long
Declare Function lsInitLSX Lib "amzi.dll" (ByVal EngID As Long, Ptr As Any) As Long
Declare Function lsAddLSX Lib "amzi.dll" Alias "lsAddLSXA" (ByVal EngID As Long, ByVal LSXFile As String, Ptr As Any) As Long
Declare Function lsAddPred Lib "amzi.dll" Alias "lsAddPredA" (ByVal EngID As Long, ByVal Predname As String, ByVal Arity As Integer, ByVal pfunc As Long, ByVal arg As Long) As Long
Declare Function lsLoad Lib "amzi.dll" Alias "lsLoadA" (ByVal EngID As Long, ByVal XPLFile As String) As Long
Declare Function lsLoadFromMemory Lib "amzi.dll" Alias "lsLoadFromMemoryA" (ByVal EngID As Long, ByVal Filename As String, ByVal Length As Long, ptr As Any) As Long
Declare Function lsMain Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsReset Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsClose Lib "amzi.dll" (ByVal EngID As Long) As Long

Declare Function lsCall Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long) As Long
Declare Function lsRedo Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsCallStr Lib "amzi.dll" Alias "lsCallStrA" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsExec Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long) As Long
Declare Function lsExecStr Lib "amzi.dll" Alias "lsExecStrA" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsExecStrTh Lib "amzi.dll" Alias "lsExecStrThA" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsPutAction Lib "amzi.dll" Alias "lsPutActionA" (ByVal EngID As Long, ByVal StrPtr As String) As Long
Declare Function lsGetActionState Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Function lsClearCall Lib "amzi.dll" (ByVal EngID As Long) As Long

Declare Function lsAsserta Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsAssertz Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsRetract Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsAssertaStr Lib "amzi.dll" Alias "lsAssertaStrA" (ByVal EngID As Long, ByVal StrPtr As String) As Long
Declare Function lsAssertzStr Lib "amzi.dll" Alias "lsAssertzStrA" (ByVal EngID As Long, ByVal StrPtr As String) As Long
Declare Function lsRetractStr Lib "amzi.dll" Alias "lsRetractStrA" (ByVal EngID As Long, ByVal StrPtr As String) As Long

Declare Function lsTermToStr Lib "amzi.dll" Alias "lsTermToStrA" (ByVal EngID As Long, ByVal Term As Long, ByVal StrPtr As String, ByVal StrLen As Long) As Long
Declare Function lsTermToStrQ Lib "amzi.dll" Alias "lsTermToStrQA" (ByVal EngID As Long, ByVal Term As Long, ByVal StrPtr As String, ByVal StrLen As Long) As Long
Declare Function lsStrToTerm Lib "amzi.dll" Alias "lsStrToTermA" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsStrTermLen Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long

Declare Function lsMakeAtom Lib "amzi.dll" Alias "lsMakeAtomA" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsMakeStr Lib "amzi.dll" Alias "lsMakeStrA" (ByVal EngID As Long, TermPtr As Long, ByVal StrPtr As String) As Long
Declare Function lsMakeInt Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal num As Long) As Long
Declare Function lsMakeFloat Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal num As Double) As Long
Declare Function lsMakeAddr Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, Ptr As Any) As Long
